<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/user_about"
            android:icon="@drawable/about"
            android:title="@string/user_about_us" />
        <item
            android:id="@+id/user_contact_us"
            android:icon="@drawable/phone"
            android:title="@string/user_contact_us" />
        <item
            android:id="@+id/user_my_profile"
            android:icon="@drawable/profile_pic"
            android:title="@string/user_my_profile" />
        <item
            android:id="@+id/user_logout"
            android:icon="@drawable/logout"
            android:title="@string/user_log_out" />


    </group>
</menu>