<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/admin_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/admin_contact_us"
            android:icon="@drawable/phone"
            android:title="@string/admin_contact_us" />
        <item
            android:id="@+id/admin_my_profile"
            android:icon="@drawable/profile_pic"
            android:title="Profile" />
        <item
            android:id="@+id/admin_logout"
            android:icon="@drawable/logout"
            android:title="@string/admin_logout" />
    </group>
</menu>