<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D9D9D9"
    android:padding="20dp"
    android:weightSum="2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2">
        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internship_role" />
        <LinearLayout
            android:id="@+id/expandLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/txtCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name" />
            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_txt" />
            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_internship" />
            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desription" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnApply"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/colorB925"
                android:text="@string/apply"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>
    <ImageView
        android:id="@+id/downarrow"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:src="@drawable/down"
        android:layout_gravity="center"
        android:layout_weight="1.8"/>
    <ImageView
        android:id="@+id/uparrow"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:src="@drawable/up"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_weight="1.8"/>


</LinearLayout>