<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.User.user_ui.user_profile.UserMyProfileFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/color5E31"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myanmar_regular"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintBottom_toBottomOf="@id/view"/>

    <!-- Profile Picture and Username -->
    <LinearLayout
        android:id="@+id/profilePicLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/my_profile" />
        <TextView
            android:id="@+id/usernameMyProfileDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="27sp" />
    </LinearLayout>

    <!-- Gender -->
    <LinearLayout
        android:id="@+id/userGenderLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePicLay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/UserGenderDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/gender_my_profile"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/genderMyProfileDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Age -->
    <LinearLayout
        android:id="@+id/userAgeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userGenderLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/ageMyProfileDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/ageDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/age_value"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:id="@+id/userMailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userAgeLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/userMailMyProfileDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/emailDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/email_value"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Phone -->
    <LinearLayout
        android:id="@+id/userPhoneLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userMailLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/userPhoneDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/user_phone"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/phoneDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/phone_value"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Role -->
    <LinearLayout
        android:id="@+id/userRoleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/userRoleDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/user_role"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/roleDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/role_value"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Organization -->
    <LinearLayout
        android:id="@+id/userOrganizationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userRoleLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/userOrganizationDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/user_organization"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/organizationDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myanmar_regular"
            android:text="@string/organization_value"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Edit Profile Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorB925"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/userOrganizationLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
